apps/netatmo-exporter/install/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: netatmo-exporter
  namespace: netatmo-exporter
  labels:
    app: netatmo-exporter
    app.kubernetes.io/name: netatmo-exporter
    app.kubernetes.io/part-of: netatmo-exporter
    app.kubernetes.io/instance: netatmo-exporter
    app.kubernetes.io/component: netatmo-exporter
spec:
  selector:
    app: netatmo-exporter
  IPFamilyPolicy: RequireDualStack
  IPFamilies:
    - IPv4
    - IPv6
  ports:
    - name: http
      protocol: TCP
      port: 9210
      targetPort: http
  type: ClusterIP
