apps/netatmo-exporter/install/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: netatmo-exporter
  namespace: netatmo-exporter
spec:
  ingressClassName: traefik-external
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`netatmo-exporter.local.asztalos.net`)
      priority: 10
      middlewares:
        - name: authentik
          namespace: traefik
        - name: default-headers
          namespace: traefik
      services:
        - name: netatmo-exporter
          namespace: netatmo-exporter
          port: 9210
  tls:
    secretName: local-asztalos-net-tls
